# libxml.wasm

./: .dockerignore  .eslintrc.cjs  .gitignore  .npmrc  .yarnrc.yml  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  jest.config.ts  package.json  pnpm-lock.yaml  prettier.config.cjs  test-embind.js  test.js  test.mjs  types.d.ts
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  dependabot-auto-merge.yml  docs.yml  publish.yml
docs/: docusaurus.config.ts  package.json
scripts/: ci.sh  copy-outputs.sh  jqout.sh  vendor.sh  wasm-test.sh  wasm.sh
src/: index.ts  types.d.ts
test/: libxml.test.ts  test.ts
wasm/: CMakeLists.txt  libxmlBind.cc  original.cc  pre.js  xmlXpath.cc  xpathBind.cc
wasm-test/: CMakeLists.txt  emBindTest.cc
